Evaluation Results/AProVE/FSE/recursion/Incorrect_Cyclic_Invoking_2_NT/output.txt
/liveness_analysis/Benchmarks/FSE/recursion/Incorrect_Cyclic_Invoking_2_NT/Incorrect_Cyclic_Invoking_2_NT.c:106:5: error: use of undeclared identifier 'ompa2'
    ompa2.revision = __VERIFIER_nondet_uint();
    ^
/liveness_analysis/Benchmarks/FSE/recursion/Incorrect_Cyclic_Invoking_2_NT/Incorrect_Cyclic_Invoking_2_NT.c:107:5: error: use of undeclared identifier 'ompa2'
    ompa2.config = __VERIFIER_nondet_uint();
    ^
/liveness_analysis/Benchmarks/FSE/recursion/Incorrect_Cyclic_Invoking_2_NT/Incorrect_Cyclic_Invoking_2_NT.c:108:5: error: use of undeclared identifier 'ompa2'
    ompa2.ints = __VERIFIER_nondet_uint();
    ^
/liveness_analysis/Benchmarks/FSE/recursion/Incorrect_Cyclic_Invoking_2_NT/Incorrect_Cyclic_Invoking_2_NT.c:109:5: error: use of undeclared identifier 'ompa2'
    ompa2.mask = __VERIFIER_nondet_uint();
    ^
/liveness_analysis/Benchmarks/FSE/recursion/Incorrect_Cyclic_Invoking_2_NT/Incorrect_Cyclic_Invoking_2_NT.c:110:5: error: use of undeclared identifier 'ompa2'
    ompa2.wumask = __VERIFI
ER_nondet_uint();
    ^
/liveness_analysis/Benchmarks/FSE/recursion/Incorrect_Cyclic_Invoking_2_NT/Incorrect_Cyclic_Invoking_2_NT.c:111:5: error: use of undeclared identifier 'ompa2'
    ompa2.dir = __VERIFIER_nondet_uint();
    ^
/liveness_analysis/Benchmarks/FSE/recursion/Incorrect_Cyclic_Invoking_2_NT/Incorrect_Cyclic_Invoking_2_NT.c:112:5: error: use of undeclared identifier 'ompa2'
    ompa2.inputs = __VERIFIER_nondet_uint();
    ^
/liveness_analysis/Benchmarks/FSE/recursion/Incorrect_Cyclic_Invoking_2_NT/Incorrect_Cyclic_Invoking_2_NT.c:113:5: error: use of undeclared identifier 'ompa2'
    ompa2.outputs = __VERIFIER_nondet_uint();
    ^
/liveness_analysis/Benchmarks/FSE/recursion/Incorrect_Cyclic_Invoking_2_NT/Incorrect_Cyclic_Invoking_2_NT.c:114:5: error: use of undeclared identifier 'ompa2'
    ompa2.level = __VERIFIER_nondet_uint();
    ^
/liveness_analysis/Benchmarks/FSE/recursion/Incorrect_Cyclic_Invoking_2_NT/Incorrect_Cyclic_Invoking_2_NT.c:115:5: error: use of undeclared identifier 'ompa2'
    
ompa2.edge = __VERIFIER_nondet_uint();
    ^
/liveness_analysis/Benchmarks/FSE/recursion/Incorrect_Cyclic_Invoking_2_NT/Incorrect_Cyclic_Invoking_2_NT.c:116:5: error: use of undeclared identifier 'ompa2'
    ompa2.debounce = __VERIFIER_nondet_uint();
    ^
/liveness_analysis/Benchmarks/FSE/recursion/Incorrect_Cyclic_Invoking_2_NT/Incorrect_Cyclic_Invoking_2_NT.c:117:5: error: use of undeclared identifier 'ompa2'
    ompa2.delay = __VERIFIER_nondet_uint();
    ^
12 errors generated.

java.io.FileNotFoundException: /tmp/1dfdb820-45b2-4011-97f0-d8f4efcc986d (No such file or directory)
	at java.base/java.io.FileInputStream.open0(Native Method)
	at java.base/java.io.FileInputStream.open(FileInputStream.java:216)
	at java.base/java.io.FileInputStream.<init>(FileInputStream.java:157)
	at aprove.Framework.Input.Translator$TranslatorSkeleton.translate(Translator.java:91)
	at aprove.InputModules.Programs.c.CToLLVMProcessor.process(CToLLVMProcessor.java:69)
	at aprove.Strategies.ExecutableStrategies.Executor.execute(Executor.java:326)
	at aprove.Strategies.ExecutableStrategies.Executor$Runner.wrappedRun(Executor.java:377)
	at aprove.Strategies.Abortions.PooledJob.run(PooledJob.java:99)
	at aprove.Strategies.Util.PrioritizableThreadPool$Worker.run(PrioritizableThreadPool.java:274)
	at java.base/java.lang.Thread.run(Thread.java:840)
MAYBE
Runtime: 2182 milliseconds